encriched with cart management feature
