# gen/http/cart/server/paths.go
@@ -1,0 +1,22 @@
+// Code generated by goa v3.1.3, DO NOT EDIT.
+//
+// HTTP request path constructors for the cart service.
+//
+// Command:
+// $ goa gen fruitshop/design
+
+package server
+
+import (
+	"fmt"
+)
+
+// AddCartPath returns the URL path to the cart service add HTTP endpoint.
+func AddCartPath(cartID string) string {
+	return fmt.Sprintf("/api/v1/cart/%v", cartID)
+}
+
+// GetCartPath returns the URL path to the cart service get HTTP endpoint.
+func GetCartPath(cartID string) string {
+	return fmt.Sprintf("/api/v1/cart/%v", cartID)
+}
